# VantaDB

./: Cargo.toml  LICENSE  README.md  documentation.md  revamp.md
proto/: vantadb.proto
scripts/: gen-python-sdk.sh
scripts/benchmark/: index.js
sdk/js/: package.json
sdk/js/proto/: vantadb.proto
sdk/js/src/: index.js
sdk/python/: pyproject.toml
sdk/python/vantadb_sdk/: __init__.py  client.py
sdk/rust/vantadb-sdk/: Cargo.toml  build.rs
sdk/rust/vantadb-sdk/proto/: vantadb.proto
sdk/rust/vantadb-sdk/src/: client.rs  lib.rs
src/: config.rs  main.rs  selfcheck.rs
src/auth/: acl.rs  certs.rs  manager.rs  mod.rs
src/bench/: mod.rs  runner.rs
src/cli/: cmd_ops.rs  cmd_security.rs  completer.rs  handler.rs  mod.rs  shell.rs
src/db/: aggregation.rs  backup.rs  changefeed.rs  crud.rs  database.rs  error.rs  filter.rs  index.rs  mod.rs  planner.rs  query.rs  schema.rs  transaction.rs  tx_ops.rs
src/raft/: forwarder.rs  lease.rs  membership.rs  mod.rs  network.rs  proto_service.rs  state_machine.rs  storage.rs  types.rs
src/server/: audit.rs  auth_interceptor.rs  lockout.rs  metrics.rs  mod.rs  rate_limit.rs  scheduler.rs  service.rs  service_auth.rs  service_db.rs  session.rs
src/storage/: engine.rs  key_index.rs  mod.rs  mvcc.rs  record.rs  segment.rs
