[package]
name = "vantadb"
version = "1.0.0"
edition = "2021"
description = "A next-generation high-performance database engine"
license = "MIT"
authors = ["Riventa Group"]

[[bin]]
name = "vantadb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
dialoguer = { version = "0.11", features = ["password"] }
colored = "2"
parking_lot = "0.12"
memmap2 = "0.9"
libc = "0.2"
dashmap = "5"
ahash = "0.8"
mimalloc = { version = "0.1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tonic = "0.12"
prost = "0.13"
regex = "1"
crc32c = "0.6"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
