[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vantadb-sdk"
version = "1.0.0"
description = "Official Python client SDK for VantaDB"
license = {text = "MIT"}
authors = [{name = "Riventa Group"}]
requires-python = ">=3.8"
keywords = ["database", "grpc", "client", "vantadb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.urls]
Repository = "https://github.com/nerophlabs/VantaDB"
