[package]
name = "vantadb-sdk"
version = "1.0.0"
edition = "2021"
description = "Official Rust client SDK for VantaDB"
license = "MIT"
authors = ["Riventa Group"]
repository = "https://github.com/nerophlabs/VantaDB"
keywords = ["database", "grpc", "client", "vantadb"]
categories = ["database"]

[dependencies]
tonic = { version = "0.12", features = ["tls", "transport"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"
